--- a/demo/vite-project/package.json
+++ b/demo/vite-project/package.json
@@ -5,14 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:tsc": "tsc --noEmit --watch",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "less": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.5",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
