--- a/demo/vite-project/package.json
+++ b/demo/vite-project/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.17",
     "typescript": "^4.9.3",
+    "unocss": "^0.58.4",
     "vite": "^4.1.0"
   }
 }
