--- a/demo/vite-project/package.json
+++ b/demo/vite-project/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.17",
     "typescript": "^4.9.3",
     "unocss": "^0.58.4",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
