--- a/demo/vite-project/package.json
+++ b/demo/vite-project/package.json
@@ -23,6 +23,9 @@
     "typescript": "^4.9.3",
     "unocss": "^0.58.4",
     "vite": "^4.1.0",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-restart": "^0.4.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-svgr": "^4.2.0"
   }
 }
