--- a/demo/vite-project/package.json
+++ b/demo/vite-project/package.json
@@ -18,8 +18,12 @@
     "@types/node": "^20.11.5",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.17",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "typescript": "^4.9.3",
     "unocss": "^0.58.4",
     "vite": "^4.1.0",
