--- a/demo/vite-project/package.json
+++ b/demo/vite-project/package.json
@@ -2,12 +2,12 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "dev:tsc": "tsc --noEmit --watch",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet ./src"
   },
   "dependencies": {
     "less": "^4.2.0",
@@ -23,10 +23,14 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
+    "prettier": "^3.2.5",
     "typescript": "^4.9.3",
     "unocss": "^0.58.4",
     "vite": "^4.1.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-restart": "^0.4.0",
     "vite-plugin-svg-icons": "^2.0.1",
