--- a/demo/vite-project/package.json
+++ b/demo/vite-project/package.json
@@ -7,7 +7,19 @@
     "dev:tsc": "tsc --noEmit --watch",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet ./src"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet ./src",
+    "lint:style": "stylelint --fix \"src/**/*.{css,less}\"",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,tsx,ts}": [
+      "npm run lint:script",
+      "git add ."
+    ],
+    "**/*.{scss}": [
+      "npm run lint:style",
+      "git add ."
+    ]
   },
   "dependencies": {
     "less": "^4.2.0",
@@ -26,13 +38,22 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "stylelint": "^16.3.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^5.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-config-standard-less": "^3.0.1",
+    "stylelint-prettier": "^5.0.0",
     "typescript": "^4.9.3",
     "unocss": "^0.58.4",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-restart": "^0.4.0",
+    "vite-plugin-stylelint": "^5.3.1",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-svgr": "^4.2.0"
   }
