--- a/demo/vite-project/package.json
+++ b/demo/vite-project/package.json
@@ -27,6 +27,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "@types/node": "^20.11.5",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -34,6 +36,7 @@
     "@typescript-eslint/parser": "^7.3.1",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.17",
+    "commitlint": "^19.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
