--- a/demo/vite-project/package.json
+++ b/demo/vite-project/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
+    "@vitejs/plugin-legacy": "^6.1.1",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.17",
     "commitlint": "^19.2.1",
@@ -53,6 +54,7 @@
     "typescript": "^4.9.3",
     "unocss": "^0.58.4",
     "vite": "^4.1.0",
+    "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-restart": "^0.4.0",
